--- a/Completed/concrete/concrete.html
+++ b/Completed/concrete/concrete.html
@@ -12,7 +12,7 @@
     <p>Type a number in each box</p>
 
     <p>Amount of concrete needed: <input type="number" id="concrete"></p>
-    <p>Ratio needeed: <input id="ratio"></p>
+    <p>Ratio (in decimals): <input type = "number" id="ratio"></p>
     <p>Amount of Cement available: <input type="number" id="cementAvail"></p>
     <p>Amount of aggregate available: <input type="number" id="aggregate"></p>
     <p><button onclick = "CalcConcrete();">Calculate</button> </p>
