--- a/Completed/trig1/trig.html
+++ b/Completed/trig1/trig.html
@@ -16,6 +16,6 @@
     <p>Values: [<span id="values"></span>]</p>
     <p><button onclick = "CreateTable();">Create Table</button> </p>
 
-    <table id="myTable" cellpadding="2" cellspacing="2"></table>
+    <table id="table" cellpadding="2" cellspacing="2"></table>
 </body>
 </html>
