Trig functions basics in js

--- a/Completed/trig1/trig.html
+++ b/Completed/trig1/trig.html
@@ -17,5 +17,6 @@
     <p><button onclick = "CreateTable();">Create Table</button> </p>
 
     <table id="table" cellpadding="2" cellspacing="2"></table>
+    <p id = "out"></p>
 </body>
 </html>
