Add Javascript and ordering

--- a/Completed/PizzaWebsite/Menu.html
+++ b/Completed/PizzaWebsite/Menu.html
@@ -4,6 +4,7 @@
       <title>Pete's Pizza Parlour Menu</title>
       <link rel="stylesheet" href="table.css"/>
       <link rel="stylesheet" href="fancyPetes.css"/>
+      <script type="text/javascript" src="pizza.js"></script>
       <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
    </head>
    <body>
@@ -77,5 +78,11 @@
             </div>
         </div>
        </div> 
+
+       <p><button onclick = "SelectOrder();">Click to select Order</button> </p>
+       <p id = "menu"></p>
+       <p id="place order"></p>
+       <p id = "orderOutput"></p> 
+       <p id = "totalCost"></p>
    </body>
 </html>
