--- a/bigger projects/Navbar/setup/index.html
+++ b/bigger projects/Navbar/setup/index.html
@@ -8,6 +8,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      
     />
 
     <!-- styles -->
@@ -16,7 +17,7 @@
   <body>
     <nav class="center">
       <div class="nav-header">
-        <img src="./logo.svg" class = "logo" alt="logo">
+        <img src="./free-logo-2mygn5hsfc-g5x2ko2zqk.jpg" class = "logo" alt="logo">
         <button class="nav-toggle">
           <i class ="fas fa-bars"></i>
         </button>
