Made significant changes to the home page with Navbar and CSS

--- a/FinalProject copy/html/home.html
+++ b/FinalProject copy/html/home.html
@@ -9,23 +9,57 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-    <!-- styles -->
-    <link rel="stylesheet" href="home.css" />
   </head>
+
   <body>
-    <section class="menu">
-      <div class="title">
-        <h2>Marketplace</h2>
-        <div class="underline"></div>
-      </div>
+        <!-- This is the Navbar in the Home page -->
+        <link rel="stylesheet" href="Navbar.css" />
+        <nav class="center">
+          <div class="nav-header">
+            <img src="./free-logo-2mygn5hsfc-g5x2ko2zqk.jpg" class = "logo" alt="logo">
+            <button class="nav-toggle">
+              <i class ="fas fa-bars"></i>
+            </button>
+        
+          <!-- links -->
+          <ul class="links">
+            <li>
+              <a href="home.html">Home</a>
+            </li>
+            <li>
+              <a href="home.html">MarketPlace</a>
+            </li>
+            <li>
+              <a href="support.html">Support</a>
+            </li>
+            <li>
+              <div class="cart">
+                <a href="cart.html">Cart</a>
+              </div>
+            </li>
+          </ul>
+          <!-- social media -->
+          </div>
+        </nav>
+        <!-- javascript -->
+        <script src="app.js"></script>
+    
+      <!-- This is the main home page -->
+      <!-- styles -->
+      <link rel="stylesheet" href="home.css" />
+      <!-- javascript -->
+      <script src="home.js"></script>
+      <section class="menu">
+          <div class="title">
+            <h2>Welcome to Buyit</h2>
+            <div class="underline"></div>
+          </div>
 
-      <div class="btn-container">
-      </div>
+        <div class="btn-container">
+        </div>
 
-      <div class="section-center">
-      </div>
-    </section>
-    <!-- javascript -->
-    <script src="home.js"></script>
+        <div class="section-center">
+        </div>
+      </section>
   </body>
-</html>
+  </html>
