--- a/FinalProject copy/html/navbar.html
+++ b/FinalProject copy/html/navbar.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
-    <link rel='stylesheet' href="navbar.css">
-    <script type='text/javascript' src='javascript/home.js'></script>
-</head>
-<body>
+    <link rel="stylesheet" href="Navbar.css" />
+  </head>
+  <body>
     <nav class="center">
-        <div class="nav-header">
-            <img src="css/free-logo" class = "logo" alt="logo">
-            <button class="nav-toggle">
-                <i class ="fas fa-bars"></i>
-            </button>
-            <!-- links -->
-            <ul class="links">
-            <li>
-                <a href="home.html">Home</a>
-            </li>
-            <li>
-                <a href="cart.html">Cart</a>
-            </li>
-            <li>
-                <a href="support.html">Support</a>
-            </li>
-            <li>
-                <a href="home.html">Marketplace</a>
-            </li>
-            </ul>
-        </div>
-      </nav>
-    </body>
-  </html>
-</body>
+      <div class="nav-header">
+        <img src="./free-logo-2mygn5hsfc-g5x2ko2zqk.jpg" class = "logo" alt="logo">
+        <button class="nav-toggle">
+          <i class ="fas fa-bars"></i>
+        </button>
+    
+      <!-- links -->
+      <ul class="links">
+        <li>
+          <a href="home.html">Home</a>
+        </li>
+        <li>
+          <a href="home.html">MarketPlace</a>
+        </li>
+        <li>
+          <a href="support.html">Support</a>
+        </li>
+        <li>
+          <div class="cart">
+            <a href="cart.html">Cart</a>
+          </div>
+        </li>
+      </ul>
+      <!-- social media -->
+      </div>
+    </nav>
+    <!-- javascript -->
+    <script src="app.js"></script>
+  </body>
 </html>
