--- a/FinalProject copy/html/home.html
+++ b/FinalProject copy/html/home.html
@@ -8,11 +8,13 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+    />  <!-- javascript -->
+    <script type="text/javascript" src="home.js"></script>
   </head>
 
   <body>
         <!-- This is the Navbar in the Home page -->
+        <div>
         <link rel="stylesheet" href="Navbar.css" />
         <nav class="center">
           <div class="nav-header">
@@ -41,23 +43,16 @@
           <!-- social media -->
           </div>
         </nav>
-        <!-- javascript -->
-        <script src="app.js"></script>
+      </div>
     
-      <!-- This is the main home page -->
-      <!-- styles -->
       <link rel="stylesheet" href="home.css" />
-      <!-- javascript -->
-      <script src="home.js"></script>
       <section class="menu">
           <div class="title">
             <h2>Welcome to Buyit</h2>
             <div class="underline"></div>
           </div>
-
         <div class="btn-container">
         </div>
-
         <div class="section-center">
         </div>
       </section>
